--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -812,8 +812,8 @@ footer{
         display: flex;
         justify-content: space-around;
         flex-basis: 50%;
+        /* display: subgrid; */
     }
-
     .btn{
         display: flex;
     }
